--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,32 @@
 }
 .card button:active{
   background-color: rgba(0,0,0,0.4);
+  animation: fromGreenToOriginal 2s;
+
+}
+.animate {
+  /* Specify both animations in sequence */
+  animation: fromOriginaltoGreen 2s forwards, fromGreentoOriginal 2s forwards 2s;
+}
+
+/* Define keyframes for changing from the original color to green */
+@keyframes fromOriginaltoGreen {
+  from {
+    background-color: #242424;
+  }
+  to {
+    background-color: green;
+  }
+}
+
+/* Define keyframes for changing from green back to the original color */
+@keyframes fromGreentoOriginal {
+  from {
+    background-color: green;
+  }
+  to {
+    background-color: #242424;
+  }
 }
 .title{
   
@@ -51,5 +77,46 @@ input{
   font-size: 20px;
   font-family:"Montserrat",sans-serif ;
   text-align: center;
+  box-shadow: 0px 0px 10px rgb(0,0,0);
+}
+.login{
+  border-top-right-radius: 20px;
+  border-top-left-radius:20px;
+  border-bottom-left-radius:20px;
+  border-bottom-right-radius:20px;
+  box-shadow: 2px 2px 10px rgba(255, 255, 255,0.2);
+
+  position: fixed;
+  background-color: #242424;
+}
+.login h1{
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  margin: 10px;
+}
+.login button{
+
+  border:solid;
+  border-color: rgba(0,0,0,0.2);
+  margin: 0px;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-color: #242424;
+}
+.login button:active{
+  background-color: rgba(0,0,0,0.4);
+
+
+}
+.button{
+  font-size: 20px;
+  background-color: #242424;
+  border: solid;
+  border-color: rgba(0,0,0,0.2);
+  border-top-right-radius: 10px;
+  border-top-left-radius:10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
   box-shadow: 0px 0px 10px rgb(0,0,0);
 }
