--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,8 @@ input{
 }
 .login button{
 
-  border:solid;
-  border-color: rgba(0,0,0,0.2);
+  border:none;
+  border-color: rgba(0,0,0,0);
   margin: 0px;
   margin-top: 10px;
   margin-left: 10px;
